interface Enemy {
    void update(Edible edible);
}